# noxed

./: .gitignore  AGENTS.md  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json  sonar-project.properties  tailwind.config.js  tsconfig.web.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html
native/rdp-spike/: CMakeLists.txt  HANDOFF.md  Makefile  README.md  build-freerdp-static.sh  diag-frames.mjs  sidecar.c  spike.c
scripts/: capture-screenshot.mjs  fix-spawn-helper.js  gen-badges.sh  verify-sidecar.js
src/main/: index.ts  menu.ts  updater.ts
src/main/__tests__/: menu.test.ts  updater.test.ts
src/main/ipc/: database.ts  docker.ts  errors.ts  k8s.ts  keychain.ts  localTerminal.ts  localfs.ts  metrics.ts  rdp.ts  redis.ts  runner.ts  security.ts  sessionTransfer.ts  sessions.ts  settings.ts  sftp.ts  socks.ts  ssh.ts  sshClients.ts  sshConfig.ts  tunnels.ts
src/main/ipc/__tests__/: database.test.ts  docker.test.ts  k8s.handlers.more.test.ts  k8s.test.ts  keychain.handlers.test.ts  keychain.test.ts  localTerminal.handlers.test.ts  localfs.handlers.test.ts  metrics.test.ts  rdp.test.ts  redis.handlers.test.ts  redis.test.ts  runner.handlers.test.ts  runner.test.ts  security.test.ts  sessionTransfer.test.ts  sessions.handlers.test.ts  sessions.test.ts  settings.handlers.test.ts  sftp.test.ts  socks.test.ts  ssh.handlers.test.ts  ssh.test.ts  sshClients.handlers.test.ts  sshConfig.test.ts  tunnels.test.ts
src/preload/: index.d.ts  index.ts
src/preload/__tests__/: index.test.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  index.css
src/renderer/src/__tests__/: harness.tsx
src/renderer/src/components/: Icons.tsx  K8sIcon.tsx  MainContent.tsx  ServerContextMenu.tsx  UnlockScreen.tsx
src/renderer/src/components/CommandPalette/: CommandPalette.tsx
src/renderer/src/components/ConnectionManager/: AddConnectionModal.tsx  ConnectionManager.tsx  ImportSshConfigModal.tsx
src/renderer/src/lib/: colors.ts  format.ts  metricsAlerts.ts  platform.ts  rdpKeymap.ts  sftpConnect.ts  sshDispatch.ts
src/renderer/src/store/: index.ts
(+73 files in other folders)
